# idash-sgx-nn

./: .gitignore  Cargo.toml  Makefile  README.md  config
enclave/: Cargo.toml
enclave/src/: decryption.rs  main.rs  nn_eval.rs  params_buffer.rs  weights_buffer.rs
enclave/src/layers/: batchnorm_add_activate.rs  conv1d.rs  dense.rs  mod.rs  zeropad_avgpool.rs
launcher/: Cargo.toml
launcher/src/: encryption.rs  main.rs
scripts/: bio-sgx-deps-install.sh  build.rs  elf2sgx.sh  preprocess.py
src/: main.rs  weights_buffer.rs
src/layers/: batchnorm_add_activate.rs  conv1d.rs  dense.rs  zeropad_avgpool.rs
