[package]
name = "launcher"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
byteorder = "1.3.2"
ndarray = "0.12.1"
ring = { git = "https://github.com/briansmith/ring.git", rev = "78b18778c7f3fba7a89ba31a754a670ddb285727" } 
